--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -32,7 +32,7 @@
     </table>
   </div>
   <%else%>
-  <h3>Your cart is currently empty</h3>
+  <h3 style="margin-bottom:20px">Your cart is currently empty</h3>
   <%end%>
 
   <div class="row">
