--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -20,4 +20,9 @@
   <aside class="price">
     <%= number_to_currency(product.price) %>
   </aside>
-</article>
+ <% if product.quantity == 0%>
+  <aside class="sold-out">
+    <%= "Sold out" %>
+  </aside>
+  <%end%>
+  </article>
