--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -58,6 +58,7 @@ main section.categories-show {
         padding: 10px;
         background-color: #f2dede;
         color: #a94442;
+        font-weight: 600;
         border-top-left-radius: 4px;
         border-bottom-right-radius: 20px;
         font-size: 0.8em;
@@ -84,4 +85,3 @@ main section.products-show {
     }
   }
 }
-
