--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -3,11 +3,40 @@
   <header class="page-header">
     <h1>Order #<%= @order.id %></h1>
   </header>
-
   <div class="order-summary jumbotron">
-    <h4>Thank you for your order!</h4>
+    <h3 style="margin-bottom:30px">Thank you for your order!</h4> 
+    <tr>
+  <td class="email">
+    <h4><%= "email"  %></h4>
+    <p><%= @order.email %></p>
+  </td>
+  <td>
+    <h4><%= "order total" %></h4>
+    <p><%= number_to_currency(@order.total_cents / 100.00)%><p>
+  </td>
+  </tr>
+  <div class="panel panel-default items">
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th colspan="2">Product</th>
+          <th>Unit Price</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @order.line_items.each do |item| %>
+          <%= render 'item', product: item.product, quantity: item[:quantity].to_i %>
+        <% end %>
+      </tbody>
+      <tfoot>
+        <tr>
+        </tr>
+      </tfoot>
+    </table>
   </div>
 
-  <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
+  </div>
+
+  <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %> 
 
 </section>
