--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,24 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<h1>Admin Dashboard</h1>
+<table class="table table-striped table-bordered">
+<thead>
+<tr scope="row">
+<th scope="col"><a href="/admin/products">Amount of products</a>
+</th>
+<th scope="col"><a href="/admin/products">Total amount of products</a>
+</th>
+<th scope="col"><a href="/admin/products">Amount of categories</a>
+</th>
+</thead>
+<tbody class="table-striped">
+</tr>
+<tr scope="row">
+<th>
+<%= @product_count %>
+</th>
+<th>
+<%= @total_product_count%>
+</th>
+<th>
+<%= @categories_count %>
+</th>
+</tbody>
