--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -46,6 +46,37 @@
           <%= link_to cart_path do %>
             <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
           <% end %>
+           <% if current_user %>
+
+           <li class="dropdown">
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            
+            <span>Signed in as <%= current_user.first_name %></span>
+            <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu">
+          <li><%= link_to "Logout", '/logout' %>
+          </li>
+          </ul>
+          </li>
+
+         <% else %>
+
+      <li class="dropdown">
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            
+            <span><%='Login/register' %></span>
+            <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu">
+          <li><%= link_to 'Login', '/login' %>
+          </li>
+          <li><%= link_to 'Signup', '/signup' %>
+          </li>
+          </ul>
+          </li>
+
+          <% end %>
         </li>
       </ul>
     </div>
