--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -11,7 +11,7 @@
 
   <div class="form-group">
   <%= label_tag :password %>
-  <%= text_field_tag :password, "", class: 'form-control' %>
+  <%= password_field_tag :password, "", class: 'form-control' %>
   </div>
 
   <%= submit_tag "Submit", class: 'btn btn-primary' %>
